# modern-cpp-cmake-starter

./: CMakeLists.txt  README.org  _r_e_a_d_m_e_8md.html  annotated.html  classgreeter_1_1_greeter.html  dir_c751314fffe2e1ea2f5b6c96e49618fe.html  files.html  greeter_8h.html  index.html  modules.html  namespacegreeter.html  namespaces.html  pages.html  searchdata-v2.js
.github/workflows/: documentation.yaml  style.yml
apps/intro/: CMakeLists.txt
apps/intro/src/: main.cpp
cmake/: CodeCoverage.cmake  Colors.cmake  Documentation.cmake  Misc.cmake  Warnings.cmake
docs/: CMakeLists.txt
libs/greeter/: CMakeLists.txt
libs/greeter/docs/: CMakeLists.txt
libs/greeter/tests/: CMakeLists.txt
